## Process this file with automake to produce Makefile.in

EXTRA_DIST =	acinclude.m4i	\
		config.guess	\
		config.sub	\
		docbook-dtd.m4i	\
		docbook-xslt.m4i	\
		docbook-xslt-min.m4i	\
		ax_compare_version.m4i	\
		gettext.m4i	\
		gnulib.m4i	\
		install-sh	\
		libtool.m4i	\
		ltmain.sh	\
		missing		\
		mkinstalldirs	\
		xsltproc.m4i
