## Process this file with automake to produce Makefile.in
pkgdata_DATA = \
	Appendix.txt \
	amadmin.8.txt \
	amaespipe.8.txt \
	amanda.8.txt \
	amanda.conf.5.txt \
	amanda-client.conf.5.txt \
	amcheck.8.txt \
	amcheckdb.8.txt \
	amcleanup.8.txt \
	amcrypt.8.txt \
	amcrypt-asym-ossl.8.txt \
	amcrypt-ossl.8.txt \
	amdd.8.txt \
	amdump.8.txt \
	amfetchdump.8.txt \
	amflush.8.txt \
	amgetconf.8.txt \
	amlabel.8.txt \
	ammt.8.txt \
	amoverview.8.txt \
	amplot.8.txt \
	amrecover.8.txt \
	amreport.8.txt \
	amrestore.8.txt \
	amrmtape.8.txt \
	amstatus.8.txt \
	amtape.8.txt \
	amtapetype.8.txt \
	amtoc.8.txt \
	amverify.8.txt \
	amverifyrun.8.txt \
	chgscsi.txt \
	dumperapi.txt \
	eventapi.txt \
	exclude.txt \
	faq.txt \
	historical.txt \
	howto-afs.txt \
	howto-auth.txt \
	howto-cygwin.txt \
	howto-filedriver.txt \
	howto-wrapper.txt \
	howtos.txt \
	index.txt \
	indexing.txt \
	install.txt \
	internals.txt \
	introduction.txt \
	ix01.txt \
	kerberos.txt \
	labelprinting.txt \
	links.txt \
	manpages.txt \
	multitape.txt \
	portusage.txt \
	pr01.txt \
	pr02.txt \
	pr03.txt \
	pr04.txt \
	rait.txt \
	references.txt \
	restore.txt \
	samba.txt \
	security-api.txt \
	security.txt \
	strategy-api.txt \
	survey.txt \
	systemnotes.txt \
	tapechangers.txt \
	tapesnchangers.txt \
	tapetypes.txt \
	technical.txt \
	topten.txt \
	upgrade.txt \
	using.txt \
	various.txt \
	vtape-api.txt \
	whatwasnew.txt \
	wishlist.txt \
	y2k.txt \
	zftape.txt

EXTRA_DIST = $(pkgdata_DATA)
